objects/ASI_CRM_Volume_KPI_By_Date__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Bottle_Collected_Std_Btl__c</fullName>
        <label>Bottle Collected (Std Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WS/Outlet</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Volume KPI By Date</relationshipLabel>
        <relationshipName>Volume_KPI_By_Date</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Execution_Date__c</fullName>
        <label>Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Green_Cap_Collection_Std_Btl__c</fullName>
        <label>Green Cap Collection (Std Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Offtake_Std_Btl__c</fullName>
        <label>Offtake (Std Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PR_Direct_Std_Btl__c</fullName>
        <label>PR Direct (Std Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Red_Cap_Collection_Std_Btl__c</fullName>
        <label>Red Cap Collection (Std Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_Depletion_Std_Btl__c</fullName>
        <label>T1 Depletion (Std Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_Depletion_to_All_Std_Btl__c</fullName>
        <label>T1 Depletion to All (Std Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_Depletion_Std_Btl__c</fullName>
        <label>T2 Depletion (Std Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_T3_Depletion_to_All_Std_Btl__c</fullName>
        <label>T2/T3 Depletion to All (Std Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Yellow_Cap_Collection_Std_Btl__c</fullName>
        <label>Yellow Cap Collection (Std Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Volume KPI By Date</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Bottle_Collected_Std_Btl__c</columns>
        <columns>ASI_CRM_Execution_Date__c</columns>
        <columns>ASI_CRM_External_ID__c</columns>
        <columns>ASI_CRM_Green_Cap_Collection_Std_Btl__c</columns>
        <columns>ASI_CRM_Offtake_Std_Btl__c</columns>
        <columns>ASI_CRM_PR_Direct_Std_Btl__c</columns>
        <columns>ASI_CRM_Red_Cap_Collection_Std_Btl__c</columns>
        <columns>ASI_CRM_T1_Depletion_Std_Btl__c</columns>
        <columns>ASI_CRM_T1_Depletion_to_All_Std_Btl__c</columns>
        <columns>ASI_CRM_T2_T3_Depletion_to_All_Std_Btl__c</columns>
        <columns>ASI_CRM_T2_Depletion_Std_Btl__c</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_Yellow_Cap_Collection_Std_Btl__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Vol-{0000000}</displayFormat>
        <label>Volume KPI By Date Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volume KPI By Date</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Volume_KPI_By_Date</fullName>
        <active>true</active>
        <label>ASI CRM CN Volume KPI By Date</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>